<resources>
    <string name="app_name">Aplikasi Cuaca Dzikri</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_tgl">Today, 5 Maret 2021</string>
    <string name="txt_tempMax">37°</string>
    <string name="txt_tempMin">32°</string>
    <string name="txtDesc">Cloudy</string>
    <string name="txtDays">Tomorrow</string>
    <string name="txtItemDesc">Clouds</string>
    <string name="txtItemTempMax">26°</string>
    <string name="txtItemTempMin">20°</string>
    <string name="kota">Depok</string>
    <string name="pilih">Pilih</string>
    <string name="purwakarta">Purwakarta</string>
    <string name="depok">Depok</string>
    <string-array name="kotaSpinner">
        <item>Depok</item>
        <item>Purwakarta</item>
    </string-array>
</resources>