<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="117dp"
      android:layout_height="116dp"
      android:layout_marginTop="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:srcCompat="@tools:sample/avatars" />

  <TextView
      android:id="@+id/labelEmail"
      android:layout_width="0dp"
      android:layout_height="32dp"
      android:layout_marginHorizontal="50dp"
      android:layout_marginStart="55dp"
      android:layout_marginTop="60dp"
      android:layout_marginEnd="50dp"
      android:text="@string/email"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <EditText
      android:id="@+id/userEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="50dp"
      android:ems="10"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

  <TextView
      android:id="@+id/labelPassword"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginHorizontal="50dp"
      android:layout_marginStart="55dp"
      android:layout_marginTop="5dp"
      android:layout_marginEnd="50dp"
      android:text="@string/password"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/userEmail" />

  <EditText
      android:id="@+id/userPassword"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginHorizontal="50dp"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/labelPassword" />

  <Button
      android:id="@+id/buttonMasuk"
      android:layout_width="307dp"
      android:layout_height="43dp"
      android:layout_marginTop="10dp"
      android:text="@string/masuk"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/userPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>